[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/gui/freegui/png/aseChange/table.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/freegui/png/aseChange/buttons/level1.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/freegui/png/aseChange/redfit.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/white.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/mixkit-video-game-mystery-alert-234.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/levels/selector/LevelSelector.gd" type="Script" id=6]
[ext_resource path="res://assets/gui/freegui/png/aseChange/buttons/level2.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/freegui/png/aseChange/buttons/level3.png" type="Texture" id=8]
[ext_resource path="res://assets/gui/freegui/png/aseChange/buttons/level4.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/freegui/png/aseChange/buttons/level2_green.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/freegui/png/aseChange/buttons/level2_gren.png" type="Texture" id=11]
[ext_resource path="res://assets/gui/freegui/png/aseChange/buttons/back.png" type="Texture" id=12]
[ext_resource path="res://assets/gui/freegui/png/aseChange/buttons/back-g.png" type="Texture" id=13]
[ext_resource path="res://assets/gui/freegui/png/aseChange/buttons/back-r.png" type="Texture" id=14]

[node name="LevelSelector" type="Node"]
script = ExtResource( 6 )

[node name="back" type="Sprite" parent="."]
position = Vector2( 582.999, 293.25 )
scale = Vector2( 19.2188, 12.066 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 521, 349.5 )
scale = Vector2( 1.6732, 1.44444 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 527, 90.5 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Control"]
margin_left = 214.0
margin_top = 210.0
margin_right = 254.0
margin_bottom = 250.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/TextureButton"]
stream = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="Control"]
margin_left = 364.0
margin_top = 210.0
margin_right = 432.0
margin_bottom = 277.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/TextureButton2"]
stream = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="Control"]
margin_left = 514.0
margin_top = 210.0
margin_right = 582.0
margin_bottom = 277.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/TextureButton3"]
stream = ExtResource( 5 )

[node name="TextureButton4" type="TextureButton" parent="Control"]
margin_left = 664.0
margin_top = 210.0
margin_right = 732.0
margin_bottom = 278.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/TextureButton4"]
stream = ExtResource( 5 )

[node name="TextureButton5" type="TextureButton" parent="Control"]
margin_left = 150.0
margin_top = 459.0
margin_right = 252.0
margin_bottom = 551.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/TextureButton5"]
stream = ExtResource( 5 )

[connection signal="pressed" from="Control/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Control/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Control/TextureButton5" to="." method="_on_TextureButton5_pressed"]
